kustomizations/monitoring/jaeger/bases/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  labels:
    component: jaeger
    app.kubernetes.io/component: service-query
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger-query
    app.kubernetes.io/part-of: jaeger
spec:
  selector:
    component: jaeger
    app.kubernetes.io/component: query
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger-query
    app.kubernetes.io/part-of: jaeger
  ports:
  - name: http-query
    port: 16686
    targetPort: 16686
