kustomizations/monitoring/jaeger/bases/ui/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-query
spec:
  entryPoints:
  - http
  - https
  routes:
  - kind: Rule
    match: PathPrefix(`/jaeger/`)
    services:
    - name: jaeger-query
      kind: Service
      port: 16686
    middlewares: []
